--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,8 @@
-# Core system libraries
-shlex
-subprocess
-sys
-os
-logging
-threading
-datetime
-pexpect
-shutil
-
+# Now using apt to minimalize roadblocks 
 
 # GUI 
-tkinter
-pyttk
+tkinter  
 
-# SEC/MONITOR
-lynis
-selinux
-fail2ban
-ufw
-apparmor
-firejail
-debsums
-tcpd
-
-# PKG MANAGER/ TOOLS
+# Libraries for Net and pkg managing 
 requests
 setuptools
-
-# run "pip freeze > requirements.txt" to ensure all are listed. 
