--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -3,47 +3,56 @@ name: Test HARDN with Conda
 on:
   push:
     branches:
-      - Dev-Testing
+      - 'Dev-Testing'
   pull_request:
     branches:
-      - Dev-Testing
-  # workflow_dispatch:
-  # schedule:
-   
-    # - cron: '0 0 * * 1' # Every day at midnight UTC
+      - main
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 1' # Every Monday at midnight UTC
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11] # Test on multiple Python versions
-      max-parallel: 4
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    steps:  
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.11
 
-    - name: Install Miniconda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        auto-update-conda: true
-        python-version: ${{ matrix.python-version }}
-        activate-environment: test-env
-        environment-file: environment.yml
+      - name: Install Miniconda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: 3.11
+          activate-environment: test-env
+          environment-file: environment.yml
 
-    - name: Lint with flake8
-      run: |
-        conda install -y flake8
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Verify flake8 installation
+        run: |
+          source activate test-env
+          conda install -y flake8
+          flake8 --version
 
-    - name: Run tests with pytest
-      run: |
-        conda install -y pytest
-        pytest
+      - name: Lint with flake8
+        run: |
+          source activate test-env
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Verify pytest installation
+        run: |
+          source activate test-env
+          conda install -y pytest
+          pytest --version
+
+      - name: Run tests with pytest
+        run: |
+          source activate test-env
+          pytest
