add deb package files

--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,13 @@
-Source: hardn-endpoint
+Source: hardn
 Section: utils
 Priority: optional
-Maintainer: Security International Group (SIG)
-Build-Depends: debhelper (>= 9)
+Maintainer: HARDN Development Team <your-email@example.com>
+Build-Depends: debhelper (>= 12), python3, python3-pyqt5
 Standards-Version: 4.5.0
-Homepage: https://WEBSITE/hardn-endpoint
+Homepage: https://github.com/opensource-for-freedom/HARDN
 
-Package: hardn-endpoint
+Package: hardn
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python3, python3-requests, python3-pyqt5, python3-pyqt5.qtsql, python3-pyqt5.qtmultimedia, python3-pyqt5.qtwidgets, python3-pyqt5.qthelp, python3-pyqt5.qtwebengine, python3-pyqt5.qtscxml, python3-pyqt5.qtlocation, python3-pyqt5.qtwebchannel, python3-pyqt5.qtquickcontrols2, python3-pyqt5.qtquickcontrols, python3-pyqt5.qtmultimediawidgets
-Description: HARDN Endpoint Deployment
- This package provides the necessary tools and scripts for deploying
- HARDN endpoints. It includes configuration files and utilities
- required for seamless integration, and STIG compliance. 
+Depends: ${misc:Depends}, python3, python3-pyqt5
+Description: HARDN Security Interface
+ A Debian tool to secure an OS using automation, monitoring, heuristics, and availability.
