--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -39,14 +39,14 @@ jobs:
           activate-environment: test-env
           environment-file: environment.yml
 
-      - name: Set PYTHONPATH to search all directories
+      - name: Set PYTHONPATH to include all directories
         run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
       - name: Verify flake8 installation
         run: |
           conda run -n test-env flake8 --version
 
-      - name: Lint with flake8
+      - name: Lint all Python files with flake8
         run: |
           conda run -n test-env flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           conda run -n test-env flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
@@ -55,6 +55,6 @@ jobs:
         run: |
           conda run -n test-env pytest --version
 
-      - name: Run tests with pytest
+      - name: Run all tests in all Python files
         run: |
-          conda run -n test-env pytest -v src/tests src/gui
+          conda run -n test-env pytest -v $(find . -type f -name "*.py")
