--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -9,18 +9,16 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1' # Every Monday at midnight UTC
+    - cron: '0 0 * * 1' 
 
-permissions:
-  contents: read
-  issues: write
-  pull-requests: write
+
+
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:  
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -39,22 +37,47 @@ jobs:
           activate-environment: test-env
           environment-file: environment.yml
 
-      - name: Set PYTHONPATH to include all directories
-        run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
-
       - name: Verify flake8 installation
         run: |
-          conda run -n test-env flake8 --version
+          source activate test-env
+          conda install -y flake8
+          flake8 --version
 
-      - name: Lint all Python files with flake8
+      - name: Lint with flake8
         run: |
-          conda run -n test-env flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          conda run -n test-env flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          source activate test-env
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Verify pytest installation
         run: |
-          conda run -n test-env pytest --version
+          source activate test-env
+          conda install -y pytest
+          pytest --version
 
-      - name: Run all tests in all Python files
+      - name: Run Python tests with pytest
         run: |
-          conda run -n test-env pytest -v $(find . -type f -name "*.py")
+          source activate test-env
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
+          pytest -v src/tests src/gui
+
+      - name: Run Shell Script Tests
+        run: |
+          echo "Testing shell scripts..."
+          for script in $(find setup -name "*.sh" -o -name "*.bash"); do
+            echo "Running $script..."
+            bash -n "$script" || exit 1
+            echo "$script passed syntax check."
+          done
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Run Rust Tests
+        run: |
+          echo "Testing Rust scripts..."
+          cd src
+          cargo test --verbose
