--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -9,23 +9,20 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1' 
-
-
-
+    - cron: '0 0 * * 1' # Run every Monday at midnight UTC
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    steps:  
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up Python 3.11
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
@@ -39,34 +36,29 @@ jobs:
 
       - name: Verify flake8 installation
         run: |
-          source activate test-env
-          conda install -y flake8
-          flake8 --version
+          conda run -n test-env conda install -y flake8
+          conda run -n test-env flake8 --version
 
       - name: Lint with flake8
         run: |
-          source activate test-env
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          conda run -n test-env flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          conda run -n test-env flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Verify pytest installation
         run: |
-          source activate test-env
-          conda install -y pytest
-          pytest --version
+          conda run -n test-env conda install -y pytest
+          conda run -n test-env pytest --version
 
       - name: Run Python tests with pytest
         run: |
-          source activate test-env
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
-          pytest -v src/tests src/gui
+          conda run -n test-env pytest -v src/tests src/gui
 
       - name: Run Shell Script Tests
         run: |
           echo "Testing shell scripts..."
           for script in $(find setup -name "*.sh" -o -name "*.bash"); do
             echo "Running $script..."
-            bash -n "$script" || exit 1
+            bash -n "$script" || { echo "$script failed syntax check"; exit 1; }
             echo "$script passed syntax check."
           done
 
