--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -46,11 +46,30 @@ jobs:
 
       - name: Verify pytest installation
         run: |
-          source activate test-env
-          conda install -y pytest
-          pytest --version
+          conda run -n test-env conda install -y pytest
+          conda run -n test-env pytest --version
 
-      - name: Run tests with pytest
+      - name: Run Python tests with pytest
+        run: |
+          export PYTHONPATH=$GITHUB_WORKSPACE
+          conda run -n test-env pytest -v src/tests src/gui
+
+      - name: Run Shell Script Tests
+        run: |
+          echo "Testing shell scripts..."
+          for script in $(find setup -name "*.sh" -o -name "*.bash"); do
+            echo "Running $script..."
+            bash -n "$script" || { echo "$script failed syntax check"; exit 1; }
+            echo "$script passed syntax check."
+          done
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Run Rust Tests
         run: |
           source activate test-env
           pytest src/setup
