--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Package: hardn
 Section: base
 Priority: optional
 Architecture: all
-Depends:
+Depends: ufw, fail2ban, apparmor, firejail, rkhunter, chkrootkit, aide, fwupd, git, gawk, policycoreutils, python3-pyqt6, libpam-pwquality
 Description: Collection of scripts for security hardening operating systems
  This package includes tools for ensuring STIG compliance, enhancing GRUB security, and optimizing system performance.
