Build Deb package, fixed main, tested

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: hardn
 Section: base
-Maintainer: Matei Busui <matei@busui.ro>
+Maintainer: Matei Busui <matei@busui.ro> and Tim Burns <cyborgcreations01@gmail.com>
 Build-Depends: debhelper-compat (= 13), devscripts, git-buildpackage
 Standards-Version: 4.6.0
 Homepage: https://github.com/OpenSource-For-Freedom/HARDN
