--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: hardn
 Section: base
-Maintainer: Matei Busui <matei@busui.ro> and Tim Burns <cyborgcreations01@gmail.com>
+Maintainer: Matei Busui <matei@busui.ro> 
 Build-Depends: debhelper-compat (= 13), devscripts, git-buildpackage
 Standards-Version: 4.6.0
 Homepage: https://github.com/OpenSource-For-Freedom/HARDN
@@ -10,6 +10,8 @@ Package: hardn
 Section: base
 Priority: optional
 Architecture: all
-Depends: ufw, fail2ban, apparmor, firejail, rkhunter, chkrootkit, aide, fwupd, git, gawk, policycoreutils, python3-pyqt6, libpam-pwquality, dpkg-dev, mysql-common, fonts-liberation, mariadb-common, unixodbc-common
+Depends: ufw, fail2ban, apparmor, firejail, rkhunter, chkrootkit, aide, fwupd, git, gawk, policycoreutils, python3-pyqt6, yara, libpam-pwquality, dpkg-dev, mysql-common, fonts-liberation, mariadb-common, unixodbc-common
 Description: Collection of scripts for security hardening operating systems
   This package includes tools for ensuring STIG compliance, enhancing GRUB security, and optimizing system performance.
+
+
