--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,7 @@ Package: hardn
 Section: base
 Priority: optional
 Architecture: all
-Depends: ufw, fail2ban, apparmor, firejail, rkhunter, chkrootkit, aide, fwupd, git, gawk, policycoreutils, python3-pyqt6, yara, libpam-pwquality, dpkg-dev, mysql-common, fonts-liberation, mariadb-common, unixodbc-common
-Description: Collection of scripts for security hardening operating systems
+Depends: ufw, fail2ban, apparmor, firejail, rkhunter, chkrootkit, aide, fwupd, git, gawk, policycoreutils, python3-pyqt6, yara, libpam-pwquality, dpkg-dev, mysql-common, fonts-liberation, mariadb-common, unixodbc-common, debhelper-compat, devscripts, git-buildpackageDescription: Collection of scripts for security hardening operating systems
   This package includes tools for ensuring STIG compliance, enhancing GRUB security, and optimizing system performance.
 
 
