--- a/.github/workflows/insights.yml
+++ b/.github/workflows/insights.yml
@@ -1,43 +1,50 @@
-name: Fetch GitHub Traffic Insights
+name: Generate Insights # we see you :)
 
 on:
   schedule:
-    - cron: '0 4 * * *'  # Daily at 04:00 UTC
+    - cron: '0 3 * * *'  
   workflow_dispatch:
 
 jobs:
-  fetch-traffic:
+  traffic-badges:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Fetch traffic insights
+      - name: Fetch GitHub Views & Clones
         run: |
-          mkdir -p traffic
+          mkdir -p public
 
-          echo "Fetching clone stats..."
-          curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/clones \
-            > traffic/clones.json
+          VIEW_JSON=$(curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/traffic/views)
 
-          echo "Fetching view stats..."
-          curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/traffic/views \
-            > traffic/views.json
+          CLONE_JSON=$(curl -s -H "Authorization: token ${{ secrets.ACTION_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/traffic/clones)
 
-      - name: Commit traffic data
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          VIEW_COUNT=$(echo "$VIEW_JSON" | jq '.count // 0')
+          CLONE_COUNT=$(echo "$CLONE_JSON" | jq '.count // 0')
 
-          git add traffic/*.json
-          git commit -m "chore: update traffic insights [skip ci]" || echo "No changes to commit"
-          git push origin HEAD
+          echo "Views: $VIEW_COUNT, Clones: $CLONE_COUNT"
 
-      - name: Upload traffic artifacts
-        uses: actions/upload-artifact@v4
+          cat <<EOF > public/traffic-views.json
+          {
+            "schemaVersion": 1,
+            "label": "views",
+            "message": "$VIEW_COUNT",
+            "color": "blue"
+          }
+EOF
+
+          cat <<EOF > public/traffic-clones.json
+          {
+            "schemaVersion": 1,
+            "label": "clones",
+            "message": "$CLONE_COUNT",
+            "color": "green"
+          }
+EOF
+
+      - name: Deploy traffic badges to gh-pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          name: traffic-insights
-          path: traffic/*.json
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
