--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '0 3 * * 1'  # Weekly on Mondays at 3 AM UTC
   workflow_dispatch:
-
+  contents: read
 jobs:
   validate-progs:
     runs-on: ubuntu-latest
