--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,9 +29,29 @@ jobs:
         mkdir -p scan_results
         for script in $(find . -type f -name "*.sh"); do
           echo "Scanning $script"
-          shellcheck "$script" > "scan_results/${script//\//_}.txt" || true
+          sanitized_name=$(echo "$script" | sed 's/\//_/g')
+          shellcheck "$script" > "scan_results/$sanitized_name.txt" || true
         done
         echo "ShellCheck completed. Results stored in scan_results/"
+
+    - name: Commit and Push Fixes
+      run: |
+        echo "Committing fixes..."
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        git checkout -b shellcheck-fixes
+        git add scan_results/
+        git commit -m "Apply Security fixes"
+        git push origin shellcheck-fixes
+
+    - name: Create Pull Request
+      run: |
+        echo "Setting up GitHub CLI..."
+        apt update && apt install -y gh
+        gh auth login --with-token <<< "$GITHUB_TOKEN"
+
+        echo "Creating pull request..."
+        gh pr create --title "ShellCheck Fixes" --body "This pull request contains fixes for issues identified during the ShellCheck scan." --base main --head shellcheck-fixes
 
     - name: Create or Update Weekly Issue
       run: |
