--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,10 +33,11 @@ jobs:
           shellcheck "$script" > "scan_results/$sanitized_name.txt" || true
         done
         echo "ShellCheck completed. Results stored in scan_results/"
-    - name: install git
+
+    - name: Install Git
       run: |
-        echo "installing git"
-        apt install git
+        echo "Installing Git..."
+        apt update && apt install -y git
 
     - name: Commit and Push Fixes
       run: |
