--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,6 +39,17 @@ jobs:
         echo "Installing Git..."
         apt update && apt install -y git
 
+    - name: Verify Git Repository
+      run: |
+        echo "Verifying Git repository..."
+        if [ ! -d ".git" ]; then
+          echo "Git repository not found. Initializing..."
+          git init
+          git remote add origin $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+          git fetch origin
+          git checkout main
+        fi
+
     - name: Commit and Push Fixes
       run: |
         echo "Committing fixes..."
