--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,20 +50,18 @@ jobs:
         git init
         git remote add origin $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
         git fetch origin
-        echo "Cleaning up untracked files..."
-        git stash --include-untracked || true
-
-        echo "Creating new branch..."
         git checkout -b shellcheck-fixes
 
     - name: Commit and Push Fixes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "Committing fixes..."
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
         git add scan_results/
         git commit -m "Apply Security fixes"
-        git push origin shellcheck-fixes
+        git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} shellcheck-fixes
 
     - name: Create Pull Request
       run: |
